# mpl-scatter-density

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  example.py  example_density.py  pyproject.toml  raster_axes.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
examples/: convert_nyc.py  example_density.py  example_double.py  example_taxi.py
mpl_scatter_density/: __init__.py  base_image_artist.py  color.py  fixed_data_density_helper.py  generic_density_artist.py  scatter_density_artist.py  scatter_density_axes.py
mpl_scatter_density/tests/: __init__.py  test_base_image_artist.py  test_scatter_density_artist.py  test_scatter_density_axes.py
raster_axes/: __init__.py  color.py  histogram2d.pyx  raster_axes.py  scatter_density.py  scatter_density_axes.py
raster_axes/tests/: __init__.py  test_scatter_density.py  test_scatter_density_axes.py
raster_scatter/: raster_axes.py
