[metadata]
name = mpl-scatter-density
url = https://github.com/astrofrog/mpl-scatter-density
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
description = Matplotlib helpers to make density scatter plots
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
	numpy
	matplotlib>=3.0
	fast-histogram>=0.3

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mpl

[options.package_data]
mpl_scatter_density.tests = baseline/*/*.png
